--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,23 @@
 {
-    "name": "school-management-backend",
+    "name": "backend",
     "version": "1.0.0",
-    "main": "server.js",
+    "description": "",
+    "license": "ISC",
+    "author": "",
+    "type": "module",
+    "main": "app.js",
     "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "dev": "nodemon app.js",
+        "start": "nodemon app.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
+        "bcryptjs": "^3.0.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.0",
-        "mysql2": "^3.6.0"
-    },
-    "devDependencies": {
-        "nodemon": "^3.0.1"
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
+        "mysql2": "^3.14.0",
+        "nodemon": "^3.1.10"
     }
 }
